# parallel-computing

./: CMakeLists.txt  auxillary.hpp  auxillary2.hpp  main.cpp  task2.cpp
